--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sorting-visualizer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://machadop1407.github.io/Sorting-Visualizer",
+  "homepage": "http://machadop1407.github.io/Sorting-Visualizer",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
